# constitution_finetuning

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: run_pipeline.sh  setup_remote.sh
src/constitution_finetune/: __init__.py  cli.py  config.py
src/constitution_finetune/constitution/: __init__.py  fetch.py  parse.py  principles.py
src/constitution_finetune/datagen/: __init__.py  categories.py  generate.py  postprocess.py  prompts.py
src/constitution_finetune/eval/: __init__.py  compare.py  judge.py  prompts.py  runner.py
src/constitution_finetune/training/: __init__.py  data.py  loop.py  sample.py
