[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constitution-finetune"
version = "0.1.0"
description = "Fine-tune open models on Claude's constitution for improved alignment"
requires-python = ">=3.10"
dependencies = [
    "tinker",
    "tinker-cookbook",
    "openai>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "requests>=2.31",
    "rich>=13.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
confine = "constitution_finetune.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
